--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -75,7 +75,7 @@
 						<div>
 							<input type="radio" name="equals_-_status" value="AuctionStarted" 
 							id="all-auctions-in-progress" /> <label
-								for="all-auctions" class="ml-2">Toutes enchères en cours</label>
+								for="all-auctions-in-progress" class="ml-2">Toutes enchères en cours</label>
 						</div>
 
 						<div class="mt-4">
