--- a/src/main/resources/templates/member/memberDetails.html
+++ b/src/main/resources/templates/member/memberDetails.html
@@ -23,6 +23,19 @@
 </head>
 <body class="bg-gray-900 font-sans text-gray-100">
 
+	<!-- Navigation -->
+	<nav class="bg-gray-800 shadow-md">
+		<div class="max-w-7xl mx-auto px-4 py-4">
+			<div class="flex justify-between items-center">
+				<!-- Logo -->
+				<th:block th:replace="~{fragments/logo.html :: logo}"></th:block>
+				<!-- Barre de navigation -->
+				<th:block th:replace="~{fragments/navBar.html :: navBar}"></th:block>
+			</div>
+		</div>
+	</nav>
+
+
 	<h1 class="text-3xl font-bold text-gray-100 text-center mt-8">Member
 		Details</h1>
 
@@ -64,6 +77,10 @@
 			<div class="flex justify-between">
 				<strong class="text-xl text-gray-100">Ville :</strong> <span
 					class="text-gray-300" th:text="${member.townName}">Ville</span>
+			</div>
+			<div class="flex justify-between">
+				<strong class="text-xl text-gray-100">Crédits :</strong> <span
+					class="text-gray-300" th:text="${member.credits}">Crédits</span>
 			</div>
 		</div>
 		<!-- Bouton retour -->
